--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-    --background: #1E1E1E;
+    --background: #1E212B;
     --yellow: #FFAE00;
     --green: #038C4C;
     --black: #101010;
@@ -39,6 +39,10 @@ main {
     margin-right: 5%;
     margin-left: 5%;
     color: white
+}
+
+.linksPC {
+    display: none;
 }
 
 /* Menu mobile */
@@ -509,22 +513,22 @@ footer a {
 
 /* Page Escape Games vueEscapeGames.php */
 
-.escapeGamesAlign{
+.escapeGamesAlign {
     margin: 20px;
     font-size: 22px;
     text-align: center;
 }
 
-.escapeGamesAlign>h2{
+.escapeGamesAlign > h2 {
     font-size: 32px;
     margin-top: 0;
 }
 
-.escapeGamesAlign>p{
+.escapeGamesAlign > p {
     margin-bottom: 50px;
 }
 
-.escapeGamesAlign>.greenLink{
+.escapeGamesAlign > .greenLink {
     padding: 25px;
     font-size: 16px;
 }
