--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-    --background: #1E1E1E;
+    --background: #1E212B;
     --yellow: #FFAE00;
     --green: #038C4C;
     --black: #101010;
@@ -574,6 +574,8 @@ footer a {
     border-collapse: collapse;
     border-spacing: 0;
     margin: 0px auto;
+    text-align: center;
+    
 }
 
 .tg td {
@@ -899,3 +901,14 @@ footer a {
     justify-content: center;
     align-items: center;
 }
+
+/* Vue Admin User */
+
+.marge{
+    margin: 30px 0px;
+}
+
+.tg .pad{
+    padding: 10px 30px;
+}
+
