--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
     --black: #101010;
     --lightBlue: #373D50;
     --red: #fb4d3d;
-    --lightGrey: #a4a4a4
+    --lightGrey: #a4a4a4;
     --veryLightBlue: #6A7497;
     --grey: #D9D9D9;
 }
@@ -744,6 +744,14 @@ footer a {
     font-size: 26px;
 }
 
+/* Page legal notice vueLegalNotice.php */
+
+.legalNoticeContent h3 {
+    font-size: 24px;
+    font-weight: 400;
+    margin: 0;
+}
+
 /* Page admin vueAdminEscapeGames.php */
 
 .anEscapeGameAdmin {
@@ -765,7 +773,7 @@ footer a {
     border-spacing: 0;
     margin: 0px auto;
     text-align: center;
-    
+
 }
 
 .tg td {
@@ -897,7 +905,7 @@ footer a {
 
 /* Page admin vueAdminQAndA.php */
 
-.greenButtonEscapeGames{
+.greenButtonEscapeGames {
     border: none;
 }
 
@@ -923,7 +931,7 @@ footer a {
     align-items: center;
     padding: 20px;
     font-size: 32px;
-    font-weight:500;
+    font-weight: 500;
 }
 
 .titleCategorieQAndA {
@@ -945,12 +953,12 @@ footer a {
     padding-right: 30%; */
 }
 
-.buttonsQandA{
+.buttonsQandA {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
-.buttonsQandA>a, .buttonsQandA>select{
+.buttonsQandA > a, .buttonsQandA > select {
     margin: 4%;
     font-size: 16px;
     color: black;
@@ -958,21 +966,21 @@ footer a {
     padding: 8% 0px;
 }
 
-.greenButtonEscapeGames{
+.greenButtonEscapeGames {
     background-color: var(--green);
 }
 
-.buttonsQandA>.redButtonQandA{
+.buttonsQandA > .redButtonQandA {
     background-color: var(--red);
     color: white;
 }
 
-h3.adminQandA{
+h3.adminQandA {
     font-weight: normal;
     font-size: 24px;
 }
 
-a>button.returnAdmin{
+a > button.returnAdmin {
     display: flex;
     align-items: center;
     gap: 8px;
@@ -983,92 +991,92 @@ a>button.returnAdmin{
     border: none;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-textarea.addTitle{
+textarea.addTitle {
     height: 240px;
 }
 
-.listQandA{
+.listQandA {
     margin: 12% 0%;
 }
 
-.oneQandA>div>div{
+.oneQandA > div > div {
     text-align: center;
     font-size: 32px;
     color: black;
-    font-weight:500;
+    font-weight: 500;
 }
 
-.oneQandA>div>p{
+.oneQandA > div > p {
     margin: 4%;
     text-align: center;
 }
 
-.oneQ{
+.oneQ {
     border: var(--green) solid 3px;
 }
 
-.oneQ>p{
+.oneQ > p {
     font-size: 24px;
 }
 
-.oneA{
+.oneA {
     border: var(--yellow) solid 3px;
 }
 
-.oneA>p{
+.oneA > p {
     font-size: 20px;
 }
 
-.titleQ{
+.titleQ {
     background-color: var(--green);
 }
 
-.titleA{
+.titleA {
     background-color: var(--yellow);
 }
 
-.span2{
+.span2 {
     grid-column: span 2;
 }
 
-.redButtonQandA.span2{
+.redButtonQandA.span2 {
     margin: 2% 0%;
     padding: 4% 0%;
 }
 
-.buttonsQandAQuestions{
+.buttonsQandAQuestions {
     margin: 8% 0%;
     gap: 4%;
 }
 
-.buttonsQandAQuestions>a{
+.buttonsQandAQuestions > a {
     margin: 0%;
     font-size: 20px;
 }
 
-.formAdmin{
+.formAdmin {
     display: grid;
     justify-content: center;
     grid-template-columns: 1fr;
 }
 
-.formAdmin>label{
+.formAdmin > label {
     display: grid;
     grid-template-columns: 1fr;
 }
 
-.formAdmin>label>input[type=text], 
-.formAdmin>label>textarea{
+.formAdmin > label > input[type=text],
+.formAdmin > label > textarea {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     width: auto;
 }
 
-.formAdmin>input[type=submit]{
+.formAdmin > input[type=submit] {
     padding: 20px 0%;
     text-align: center;
     margin: 0% 10%;
@@ -1245,11 +1253,11 @@ textarea.addTitle{
 
 /* Vue Admin User */
 
-.marge{
+.marge {
     margin: 30px 0px;
 }
 
-.tg .pad{
+.tg .pad {
     padding: 10px 30px;
 }
 
@@ -1268,48 +1276,47 @@ textarea.addTitle{
     font-size: 18px;
 }
 
-.Nofond{
+.Nofond {
     border: 0px !important;
 }
 
-.Nofond>select{
+.Nofond > select {
     padding: 5px 10px;
     background-color: var(--yellow);
 
 }
 
-.Nofond>select>option{
+.Nofond > select > option {
     background-color: var(--grey);
 }
 
-.Nofond>a{
+.Nofond > a {
     background-color: var(--red);
     padding: 10px 30px;
     color: black;
     text-decoration: none;
 }
 
-.center{
+.center {
     margin-top: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.Search{
+.Search {
     background-color: var(--yellow);
     border: none;
     padding: 15px 50px;
     font-size: 20px;
 }
 
-.Save{
+.Save {
     background-color: var(--green);
     border: none;
     padding: 15px 50px;
     font-size: 20px;
 }
-
 
 
 /* Page de connexion vueLogin.php */
@@ -1366,7 +1373,7 @@ textarea.addTitle{
     border: solid 3px #ff6161;
 }
 
-.padding{
+.padding {
     padding: 0px 20px;
 
 }
