--- a/styles/stylePC.css
+++ b/styles/stylePC.css
@@ -68,6 +68,40 @@ header img {
     margin-right: 20px;
 }
 
+/* Footer */
+
+.tel{
+    display: none;
+}
+
+.pc{
+    display: flex;
+    justify-content: space-around;
+}
+
+.taille{
+    width: 300px;
+}
+
+.taille>img{
+    width: 100%;
+}
+
+.ligneFooter{
+    display: block;
+    text-align: center;
+    gap: 10px;
+}
+
+.Yellow{
+    color: var(--yellow);
+    text-align: center;
+}
+
+.CenterName{
+    font-size: 12pt;
+    text-align: center;
+}
 
 /* Page d'accueil vue.Accueil.php */
 
