--- a/styles/style.css
+++ b/styles/style.css
@@ -834,6 +834,10 @@ textarea.addTitle{
     margin: 12% 0%;
 }
 
+.oneQandA{
+    margin: 16% 0%;
+}
+
 .oneQandA>div>div{
     text-align: center;
     font-size: 32px;
