--- a/styles/style.css
+++ b/styles/style.css
@@ -113,20 +113,20 @@ main {
 
 .linksMenuAdmin a {
     display: flex;
-    justify-content: center;ç
-    align-items: center;ç
-    gap: 10px;ç
-}ç
-ç
-.loginMobileLink {ç
-    display: flex;ç
-    justify-content: center;ç
-    align-items: center;ç
-    font-size: 24px;ç
-}ç
-ç
-.loginMobileLink svg {ç
-    width: 40px;ç
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.loginMobileLink {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+}
+
+.loginMobileLink svg {
+    width: 40px;
     height: 40px;
 }
 
